<resources>
    <string name="main_app_name">Deep Link Launcher</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_no_activity_resolved">"No activity found to resolve the given deep link"</string>
    <string name="error_improper_uri">"Improper URI detected"</string>
    <string name="play_services_error">"Play Services Not Found. Please install/update the latest play services version to be able to type deep links directly from the web"</string>
    <string name="title_activity_deep_link_history">@string/main_app_name</string>
    <string name="error_title">Error</string>

    <!--String resources (override) for rate API-->
    <string name="rate_dialog_title">Rate this app?</string>
    <string name="rate_dialog_message">If you found this open-source app to be useful, please consider leaving a quick review. Thank you for the support!</string>
    <string name="rate_dialog_ok">Sure</string>
    <string name="rate_dialog_cancel">Later</string>
    <string name="rate_dialog_no">Don\'t show again</string>

    <string name="share_chooser_title">Your dev friends are on…</string>
    <string name="share_text">Hi! You can test out android deep links without ADB, directly from your laptop browser or android phone using this tool: https://play.google.com/store/apps/details?id=com.manoj.dlt</string>
    <string name="onboarding_input_title">Just type your deep link here…</string>
    <string name="onboarding_launch_title">Launch the deep link…</string>
    <string name="onboarding_history_title">And when you return, your history will be saved!</string>
    <string name="deep_link_search_hint">Enter your deep link…</string>
    <string name="menu_web_title">Fire from web</string>
    <string name="menu_rate_title">Rate</string>
    <string name="menu_share_title">Share</string>
    <string name="menu_about_title">About</string>
    <string name="menu_list_item_edit">Edit</string>
    <string name="menu_list_item_qr">View QR code</string>
    <string name="menu_list_item_delete">Delete</string>
    <string name="menu_list_item_createShortcut">Create shortcut</string>

    <string name="placeShortcut_title">Place shortcut on desktop?</string>
    <string name="placeShortcut_cancel">Cancel</string>
    <string name="placeShortcut_ok">Create</string>
    <string name="placeShortcut_success">Shortcut placed on desktop</string>
    <string name="placeShortcut_failure">Error creating shortcut</string>
    <string name="label">Label</string>

    <string name="editDialog_pathHint">path</string>
    <string name="editDialog_queryKeyHint">key</string>
    <string name="editDialog_queryValueHint">value</string>
    <string name="editDialog_title">Edit deep link</string>
    <string name="editDialog_preview_label">Preview</string>
    <string name="editDialog_path_label">Path</string>
    <string name="editDialog_queryString_label">Query string parameters</string>
    <string name="menu_scan_title">Scan</string>
    <string name="scanner_continuous">Continuous Capture</string>

    <string name="contentDesc_goButton">Launch deep link</string>
    <string name="contentDesc_paste">Paste clipboard contents</string>
    <string name="contentDesc_clear">Clear input</string>
    <string name="contentDesc_deepLink_appIcon">App icon</string>
    <string name="contentDesc_deepLink_overflow">Deep Link overflow menu</string>
    <string name="contentDesc_qrCode">QR code</string>
    <string name="qrcode_title">QR Code</string>
    <string name="saveAsNew">Save as new</string>
    <string name="contentDesc_edit">Edit button</string>
    <string name="editDialog_scheme_and_authority_label"><![CDATA[Scheme & Authority]]></string>
    <string name="editDialog_schemeHint">scheme</string>
    <string name="editDialog_authorityHint">authority</string>
    <string name="editDialog_fragment_label">Fragment</string>
    <string name="editDialog_fragmentHint">fragment</string>
    <string name="about_creator">Created by David Whitman</string>
    <string name="about_versionCode">Build: %s</string>
    <string name="about_versionName">Version: %s</string>
    <string name="about_dltUrl" translatable="false">https://github.com/ManojMadanmohan/dlt</string>
    <string name="about_dlt">Built upon Deep Link Tester by Manoj Madanmohan</string>
    <string name="about_appIcon">App icon</string>
    <string name="menu_list_item_copy">Copy</string>
    <string name="copiedToClipboard">Copied to clipboard</string>
    <string name="menu_list_item_share">Share</string>
    <string name="list_item_share_chooserTitle">Send to...</string>
</resources>
