<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.thunderclouddev.deeplink.AboutController.ViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/about_appIconSize"
            android:layout_height="@dimen/about_appIconSize"
            android:layout_marginTop="@dimen/spacingMedium"
            android:contentDescription="@string/about_appIcon"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:text="@string/about_creator"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:text="@string/about_dlt"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/about_dltUrl"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingSmall"
            android:text="@{@string/about_versionName(model.versionName)}"
            tools:text="Version name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/about_versionCode(model.versionCode)}"
            tools:text="Version code"/>
    </LinearLayout>
</layout>