<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="info"
            type="com.thunderclouddev.deeplink.ui.edit.EditLinkViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/edit_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/editDialog_preview_label">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/spacingLarge"
                android:paddingStart="@dimen/spacingLarge"
                android:paddingTop="@dimen/spacingLarge">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label"
                    android:inputType="textPersonName"
                    android:text="@={info.label}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacingSmall"
                    android:labelFor="@+id/edit_deepLink_schemeAndAuthority"
                    android:text="@string/editDialog_scheme_and_authority_label"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/edit_deepLink_schemeAndAuthority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/editDialog_schemeHint"
                        android:inputType="textUri"
                        android:maxWidth="@dimen/edit_deepLink_schemeWidth"
                        android:minWidth="@dimen/spacingHuge"
                        android:text="@={info.scheme}"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacingMicro"
                        android:layout_marginStart="@dimen/spacingMicro"
                        android:text="://"
                        android:textSize="@dimen/textSubtitle"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/editDialog_authorityHint"
                        android:inputType="textUri"
                        android:text="@={info.authority}"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacingSmall"
                    android:labelFor="@+id/edit_deepLink_path"
                    android:text="@string/editDialog_path_label"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/edit_deepLink_path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/editDialog_pathHint"
                    android:inputType="textUri"
                    android:text="@={info.path}"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacingSmall"
                    android:labelFor="@+id/edit_queryLayout"
                    android:text="@string/editDialog_queryString_label"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/edit_queryLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacingSmall"
                    android:labelFor="@+id/edit_deepLink_fragmentPart"
                    android:text="@string/editDialog_fragment_label"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/edit_deepLink_fragmentPart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacingMicro"
                        android:layout_marginStart="@dimen/spacingMicro"
                        android:text="#"
                        android:textSize="@dimen/textSubtitle"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/editDialog_fragmentHint"
                        android:inputType="textUri"
                        android:text="@={info.fragment}"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/editDialog_preview_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editDialog_preview"
            android:layout_marginEnd="@dimen/spacingMedium"
            android:layout_marginStart="@dimen/spacingMedium"
            android:layout_marginTop="@dimen/spacingSmall"
            android:labelFor="@+id/editDialog_preview"
            android:text="@string/editDialog_preview_label"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/editDialog_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/spacingMedium"
            android:layout_marginStart="@dimen/spacingMedium"
            android:text="@{info.fullDeepLink}"/>
    </RelativeLayout>
</layout>