<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="info"
            type="com.thunderclouddev.deeplink.ui.edit.EditLinkDialog.ViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/spacingLarge"
            android:layout_marginEnd="@dimen/spacingLarge"
            android:layout_marginStart="@dimen/spacingLarge"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/edit_label"
                android:text="@string/editDialog_title_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label"
                android:inputType="textPersonName"
                android:text="@={info.label}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingSmall"
                android:labelFor="@+id/edit_deepLink"
                android:text="@string/editDialog_path_label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_deepLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editDialog_pathHint"
                android:inputType="textUri"
                android:text="@={info.path}" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingSmall"
                android:labelFor="@+id/edit_queryLayout"
                android:text="@string/editDialog_queryString_label"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/edit_queryLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacingMedium"
                android:labelFor="@+id/editDialog_preview"
                android:text="@string/editDialog_preview_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/editDialog_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{info.fullDeepLink}" />
        </LinearLayout>
    </FrameLayout>
</layout>