<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/deep_link_history_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.thunderclouddev.deeplink.ui.activities.HomeController">

        <android.support.v7.widget.CardView
            android:id="@+id/deepLink_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="@dimen/spacingSmall">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacingSmall"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/deepLink_paste"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/contentDesc_paste"
                    android:paddingBottom="1dp"
                    android:paddingEnd="2dp"
                    android:paddingStart="@dimen/spacingMicro"
                    android:paddingTop="3dp"
                    android:src="@drawable/ic_content_paste_black_24dp"
                    android:tint="?android:colorAccent"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/spacingTiny"
                    android:paddingStart="@dimen/spacingSmall">

                    <EditText
                        android:id="@+id/deepLink_editText_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/deep_link_search_hint"
                        android:imeOptions="actionGo"
                        android:inputType="textUri"
                        android:minHeight="@dimen/spacingSmall"
                        android:paddingEnd="@dimen/spacingLarge"
                        android:paddingStart="0dp"/>

                    <ImageView
                        android:id="@+id/deepLink_btn_clearInput"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginTop="1dp"
                        android:contentDescription="@string/contentDesc_clear"
                        android:paddingEnd="@dimen/spacingTiny"
                        android:paddingStart="0dp"
                        android:src="@drawable/ic_x"
                        android:tint="@color/grayDark"/>

                </FrameLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/gray"/>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacingSmall_half"
                    android:layout_marginTop="1dp">

                    <ImageView
                        android:id="@+id/deepLink_btn_go"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/contentDesc_goButton"
                        android:src="@drawable/deeplink_btn_go"
                        android:tint="@color/accent"
                        android:tintMode="src_in"/>

                    <ImageView
                        android:id="@+id/deepLink_btn_go_forAnims"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/contentDesc_goButton"
                        android:src="@drawable/deeplink_btn_go"
                        android:tint="@color/accent"
                        android:tintMode="src_in"
                        android:visibility="gone"/>
                </FrameLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/deepLink_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:divider="@color/gray"
            android:paddingEnd="@dimen/spacingSmall"
            android:paddingStart="@dimen/spacingSmall"
            android:paddingTop="54dp"/>

        <!--android:listSelector="?attr/selectableItemBackground"-->
        <ProgressBar
            android:id="@+id/progress_wheel"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>
</layout>